[sync] Transient_invalidation_error in chrome://invalidations on Android.

invalidation_service_android never updated its logger instance's state,
since the state is always enabled. This meant the logger only ever
reported the state as its initial value, which is transient_error. This
change causes invalidation_service_android to update the state to
enabled upon construction.

R=pavely@chromium.org

BUG=630406

[sync] re-enable SyncTest#testRename

Review-Url: https://codereview.chromium.org/2201503002
Cr-Commit-Position: refs/heads/master@{#408799}

Former-commit-id: 0cd818d507de24f20c5a23f69cc94b52d7ace708